# rust-mvp

./: .gitignore  Cargo.toml  README.md  actuator_temperature.Dockerfile  controller.Dockerfile  environment.Dockerfile  sensor_temperature.Dockerfile
.githooks/: pre-push
actuator/: Cargo.toml
actuator/src/: lib.rs
actuator_temperature/: Cargo.toml
actuator_temperature/src/: command.rs  lib.rs  main.rs
controller/: Cargo.toml
controller/resources/: index.html
controller/src/: assessor.rs  index.html  lib.rs  main.rs  state.rs
datum/src/: kind.rs  lib.rs  unit.rs  value.rs
demo/: Cargo.toml
demo/src/: main.rs
device/: Cargo.toml
device/src/: address.rs  handler.rs  id.rs  lib.rs  message.rs  model.rs  name.rs  request.rs
environment/: Cargo.toml
environment/src/: generator.rs  lib.rs  main.rs
sensor/: Cargo.toml
sensor/src/: lib.rs
sensor_temperature/: Cargo.toml
sensor_temperature/src/: lib.rs  main.rs
tests/: Cargo.toml
tests/src/: main.rs
tests/tests/: demo.rs
