[workspace]

# because edition = "2021"
# see: https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

members = [
    "device",
    "controller",
    "environment",
    "demo",
    "datum",
    "sensor",
    "sensor_temperature",
    "actuator",
    "actuator_temperature",
    "tests"
]