[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actuator = { path = "../actuator" }
controller = { path = "../controller" }
device = { path = "../device" }
environment = { path = "../environment" }
sensor = { path = "../sensor" }
sensor_temperature = { path = "../sensor_temperature" }
actuator_temperature = { path = "../actuator_temperature" }

local-ip-address = "0.5.6"
mdns-sd = "0.10.1"
uuid = {version = "1.6.1", features = ["v4"]}